# bombermanWIP

./: .gitignore  Board.cpp  Board.hpp  Bomb.cpp  Bomb.hpp  BreakWall.cpp  CMakeLists.txt  Display.cpp  Display.hpp  Fire.cpp  Mac_OS_install.sh  Makefile  Object.cpp  Object.hpp  Player.cpp  Player.hpp  Position.hpp  README.md  Ubuntu_install.sh  ViewObj.cpp  ViewObj.hpp  Wall.cpp  Wall.hpp  Windows_install.sh  general.hpp  main.cpp  test
assets/: bobome.blend  bobome.blend1  bobome.mtl  bomb.blend  bomb.mtl  monster1.blend  monster1.mtl  rock.blend  rock.mtl
assets/bomberman_parts/: bomberman.blend  bomberman.mtl
config/: README.md
inc/: AnimationManager.hpp  Axes.hpp  CLWrapper.hpp  Camera.hpp  Constant.hpp  Core.hpp  Cube.hpp  GameLogic.hpp  IRenderedObject.hpp  Noise.hpp  OBJObject.hpp  ObjectLoader.hpp  RenderManager.hpp  ShaderManager.hpp  Skybox.hpp  TextObject.hpp  TextRenderManager.hpp  TextureManager.hpp  Utils.hpp  Vertex.hpp
inc/game_logic/: Board.hpp  Bomb.hpp  BombPowerUp.hpp  BreakWall.hpp  Display.hpp  Fire.hpp  Input.hpp  KeyInput.hpp  Object.hpp  Player.hpp  Position.hpp  Time.hpp  ViewObj.hpp  Wall.hpp  general.hpp
kernels/: generateBlock.h
shaders/: axes.fragment.glsl  axes.vertex.glsl  obj.fragment.glsl  obj.vertex.glsl  skybox.fragment.glsl  skybox.vertex.glsl  text.fragment.glsl  text.vertex.glsl
src/: AnimationManager.cpp  Axes.cpp  CLWrapper.cpp  Camera.cpp  Core.cpp  Cube.cpp  GameLogic.cpp  IRenderedObject.cpp  Noise.cpp  OBJObject.cpp  ObjectLoader.cpp  RenderManager.cpp  ShaderManager.cpp  Skybox.cpp  TextObject.cpp  TextRenderManager.cpp  TextureManager.cpp  Utils.cpp  main.cpp
src/game_logic/: Board.cpp  Bomb.cpp  BombPowerUp.cpp  BreakWall.cpp  Display.cpp  Fire.cpp  FirePowerUp.cpp  Input.cpp  KeyInput.cpp  Object.cpp  Player.cpp  Time.cpp  ViewObj.cpp  Wall.cpp  main.cpp
src/game_logic/shaderpix/srcs/: Cube.cpp  RenderObject.cpp
working_version/: Makefile
working_version/engine/srcs/: Camera.cpp  Cube.cpp  Cube.hpp  RenderObject.cpp  RenderObject.hpp  input.cpp  input.hpp  panel.cpp  panel.hpp
working_version/srcs/: Board.cpp  Board.hpp  Bomb.cpp  BombPowerUp.cpp  BreakWall.cpp  Constant.hpp  Display.cpp  Display.hpp  Enemy.cpp  Enemy.hpp  Fire.cpp  Fire.hpp  FirePowerUp.cpp  FirePowerUp.hpp  KeyInput.cpp  Object.cpp  Object.hpp  PierceBomb.cpp  PierceBomb.hpp  PiercePowerUp.cpp  PiercePowerUp.hpp  Player.cpp  Player.hpp  SkatesPowerUp.cpp  SkatesPowerUp.hpp  Time.cpp  Wall.cpp  main.cpp
